phase3/TigerParser.java
package p3;

// $ANTLR 3.5.2 Tiger.g 2015-04-26 07:11:26

	import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class TigerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARRAY", "ASSIGN", "ASSIGN_STMT", 
		"BEGIN", "BLOCK", "BREAK", "COLON", "COMMA", "COMMENT", "DIV", "DO", "Digit", 
		"Digits", "ELSE", "END", "ENDDO", "ENDIF", "EQ", "FIXEDPT", "FOR", "FOR_EXPR", 
		"FUNCTION", "FUNCTION_LIST", "FUNCT_ARGUMENT_LIST", "FixedPointLiteral", 
		"GREATER", "GREATEREQ", "IF", "IF_ELSE_EXPR", "INDEX1", "INDEX2", "INT", 
		"Identifier", "IntegerLiteral", "LBRACK", "LESSER", "LESSEREQ", "LINE_COMMENT", 
		"LPAREN", "Letter", "MAIN", "MINUS", "MULT", "NEQ", "NaturalNumber", "OF", 
		"OR", "PARAM_LIST", "PLUS", "RBRACK", "RETURN", "RET_TYPE", "RPAREN", 
		"SEMI", "STAT_SEQ", "THEN", "TO", "TYPE", "TYPE_DECL", "TYPE_DECL_LIST", 
		"VAR", "VAR_DECL", "VAR_DECL_LIST", "VOID", "WHILE", "WS", "W_CONDITION"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int ARRAY=5;
	public static final int ASSIGN=6;
	public static final int ASSIGN_STMT=7;
	public static final int BEGIN=8;
	public static final int BLOCK=9;
	public static final int BREAK=10;
	public static final int COLON=11;
	public static final int COMMA=12;
	public static final int COMMENT=13;
	public static final int DIV=14;
	public static final int DO=15;
	public static final int Digit=16;
	public static final int Digits=17;
	public static final int ELSE=18;
	public static final int END=19;
	public static final int ENDDO=20;
	public static final int ENDIF=21;
	public static final int EQ=22;
	public static final int FIXEDPT=23;
	public static final int FOR=24;
	public static final int FOR_EXPR=25;
	public static final int FUNCTION=26;
	public static final int FUNCTION_LIST=27;
	public static final int FUNCT_ARGUMENT_LIST=28;
	public static final int FixedPointLiteral=29;
	public static final int GREATER=30;
	public static final int GREATEREQ=31;
	public static final int IF=32;
	public static final int IF_ELSE_EXPR=33;
	public static final int INDEX1=34;
	public static final int INDEX2=35;
	public static final int INT=36;
	public static final int Identifier=37;
	public static final int IntegerLiteral=38;
	public static final int LBRACK=39;
	public static final int LESSER=40;
	public static final int LESSEREQ=41;
	public static final int LINE_COMMENT=42;
	public static final int LPAREN=43;
	public static final int Letter=44;
	public static final int MAIN=45;
	public static final int MINUS=46;
	public static final int MULT=47;
	public static final int NEQ=48;
	public static final int NaturalNumber=49;
	public static final int OF=50;
	public static final int OR=51;
	public static final int PARAM_LIST=52;
	public static final int PLUS=53;
	public static final int RBRACK=54;
	public static final int RETURN=55;
	public static final int RET_TYPE=56;
	public static final int RPAREN=57;
	public static final int SEMI=58;
	public static final int STAT_SEQ=59;
	public static final int THEN=60;
	public static final int TO=61;
	public static final int TYPE=62;
	public static final int TYPE_DECL=63;
	public static final int TYPE_DECL_LIST=64;
	public static final int VAR=65;
	public static final int VAR_DECL=66;
	public static final int VAR_DECL_LIST=67;
	public static final int VOID=68;
	public static final int WHILE=69;
	public static final int WS=70;
	public static final int W_CONDITION=71;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public TigerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public TigerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return TigerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Tiger.g"; }


	public static SymbolTable st = new SymbolTable();
	protected int hasError = 0;
	public void printTokenType() {
			int size_token = input.size();
			for (int i = 0; i < size_token; i++) {
				int temp = input.get(i).getType();
				if (temp < 0) {
					temp = 1;
				}
				if (temp != 70) {
					String nameOfToken = tokenNames[temp];
					System.out.print(nameOfToken + " ");
				}
			}
		}
			    public void displayRecognitionError(String[] tokenNames,
			                                        RecognitionException e) {
			        hasError = 1;
			        String hdr = getErrorHeader(e);
			        String[] input = e.input.toString().split("\n");
			        String[] errmsg = hdr.split(":");
			        String msg = getErrorMessage(e, tokenNames);
			        String temp = "";
			        String temp2 = "";
			        int i = errmsg[0].length() - 1;
			        int j = 0;
			        while ((errmsg[0].substring(i, i + 1).equals("0"))
			        		|| (errmsg[0].substring(i, i + 1).equals("1"))
			        		|| (errmsg[0].substring(i, i + 1).equals("2"))
			        		|| (errmsg[0].substring(i, i + 1).equals("3"))
			        		|| (errmsg[0].substring(i, i + 1).equals("4"))
			        		|| (errmsg[0].substring(i, i + 1).equals("5"))
			        		|| (errmsg[0].substring(i, i + 1).equals("6"))
			        		|| (errmsg[0].substring(i, i + 1).equals("7"))
			        		|| (errmsg[0].substring(i, i + 1).equals("8"))
			        		|| (errmsg[0].substring(i, i + 1).equals("9"))) {
			        	temp = errmsg[0].substring(i, i + 1) + temp;
			        	i--;
			        }
			        while (j < errmsg[1].length() && (errmsg[1].substring(j, j + 1).equals("0")
			        				||errmsg[1].substring(j, j + 1).equals("0")
			        				||errmsg[1].substring(j, j + 1).equals("1")
			        				||errmsg[1].substring(j, j + 1).equals("2")
			        				||errmsg[1].substring(j, j + 1).equals("3")
									||errmsg[1].substring(j, j + 1).equals("4")
									||errmsg[1].substring(j, j + 1).equals("5")
									||errmsg[1].substring(j, j + 1).equals("6")
									||errmsg[1].substring(j, j + 1).equals("7")
									||errmsg[1].substring(j, j + 1).equals("8")
									||errmsg[1].substring(j, j + 1).equals("9"))) {
			        	temp2 = temp2 + errmsg[1].substring(j, j + 1);
			        	j++;
			        }
			        int linenum = Integer.parseInt(temp);
			        int num = Integer.parseInt(temp2);
			        String line;
			        String finalmessage;
			        boolean lastline = true;
			        for (int k = 0; k < num; k++) {
			        	if (input[linenum - 1].substring(k, k + 1)!= null 
			        	&& !(input[linenum - 1].substring(k, k + 1).equals(" ")) 
			        	&& !(input[linenum - 1].substring(k, k + 1).equals("\t"))) {
			        		lastline = false;
			        	}
			        }
			        if (num == 0 || lastline) {
			        	line = input[linenum - 2];
			        	finalmessage = line;
			        } else {
			            line = input[linenum - 1];
			            finalmessage = line.substring(0, num);
			        }
			        
			        System.out.println(hdr + " " + msg + ". prefix of error : " + finalmessage);
			    }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// Tiger.g:108:1: program : type_declaration_list funct_list main_function ;
	public final TigerParser.program_return program() throws RecognitionException {
		TigerParser.program_return retval = new TigerParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope type_declaration_list1 =null;
		ParserRuleReturnScope funct_list2 =null;
		ParserRuleReturnScope main_function3 =null;


		try {
			// Tiger.g:109:5: ( type_declaration_list funct_list main_function )
			// Tiger.g:110:5: type_declaration_list funct_list main_function
			{
			root_0 = (Object)adaptor.nil();



			    	st.initializeScope();
			    
			pushFollow(FOLLOW_type_declaration_list_in_program142);
			type_declaration_list1=type_declaration_list();
			state._fsp--;

			adaptor.addChild(root_0, type_declaration_list1.getTree());

			pushFollow(FOLLOW_funct_list_in_program144);
			funct_list2=funct_list();
			state._fsp--;

			adaptor.addChild(root_0, funct_list2.getTree());

			pushFollow(FOLLOW_main_function_in_program146);
			main_function3=main_function();
			state._fsp--;

			adaptor.addChild(root_0, main_function3.getTree());


			    	st.finalizeScope();
			    	System.out.println(st.toString());
			    
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class funct_list_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "funct_list"
	// Tiger.g:207:1: funct_list : funct_declaration_list -> ^( FUNCTION_LIST ( funct_declaration_list )? ) ;
	public final TigerParser.funct_list_return funct_list() throws RecognitionException {
		TigerParser.funct_list_return retval = new TigerParser.funct_list_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope funct_declaration_list4 =null;

		RewriteRuleSubtreeStream stream_funct_declaration_list=new RewriteRuleSubtreeStream(adaptor,"rule funct_declaration_list");

		try {
			// Tiger.g:208:2: ( funct_declaration_list -> ^( FUNCTION_LIST ( funct_declaration_list )? ) )
			// Tiger.g:208:4: funct_declaration_list
			{
			pushFollow(FOLLOW_funct_declaration_list_in_funct_list1131);
			funct_declaration_list4=funct_declaration_list();
			state._fsp--;

			stream_funct_declaration_list.add(funct_declaration_list4.getTree());
			// AST REWRITE
			// elements: funct_declaration_list
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 208:27: -> ^( FUNCTION_LIST ( funct_declaration_list )? )
			{
				// Tiger.g:208:30: ^( FUNCTION_LIST ( funct_declaration_list )? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNCTION_LIST, "FUNCTION_LIST"), root_1);
				// Tiger.g:208:46: ( funct_declaration_list )?
				if ( stream_funct_declaration_list.hasNext() ) {
					adaptor.addChild(root_1, stream_funct_declaration_list.nextTree());
				}
				stream_funct_declaration_list.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "funct_list"


	public static class funct_declaration_list_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "funct_declaration_list"
	// Tiger.g:211:1: funct_declaration_list : ( funct_declaration funct_declaration_list | VOID ! ( funct_declaration_tail funct_declaration_list )? );
	public final TigerParser.funct_declaration_list_return funct_declaration_list() throws RecognitionException {
		TigerParser.funct_declaration_list_return retval = new TigerParser.funct_declaration_list_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token VOID7=null;
		ParserRuleReturnScope funct_declaration5 =null;
		ParserRuleReturnScope funct_declaration_list6 =null;
		ParserRuleReturnScope funct_declaration_tail8 =null;
		ParserRuleReturnScope funct_declaration_list9 =null;

		Object VOID7_tree=null;

		try {
			// Tiger.g:212:5: ( funct_declaration funct_declaration_list | VOID ! ( funct_declaration_tail funct_declaration_list )? )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==FIXEDPT||(LA2_0 >= INT && LA2_0 <= Identifier)) ) {
				alt2=1;
			}
			else if ( (LA2_0==VOID) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// Tiger.g:212:7: funct_declaration funct_declaration_list
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_funct_declaration_in_funct_declaration_list1155);
					funct_declaration5=funct_declaration();
					state._fsp--;

					adaptor.addChild(root_0, funct_declaration5.getTree());

					pushFollow(FOLLOW_funct_declaration_list_in_funct_declaration_list1157);
					funct_declaration_list6=funct_declaration_list();
					state._fsp--;

					adaptor.addChild(root_0, funct_declaration_list6.getTree());

					}
					break;
				case 2 :
					// Tiger.g:213:7: VOID ! ( funct_declaration_tail funct_declaration_list )?
					{
					root_0 = (Object)adaptor.nil();


					VOID7=(Token)match(input,VOID,FOLLOW_VOID_in_funct_declaration_list1165); 
					// Tiger.g:213:13: ( funct_declaration_tail funct_declaration_list )?
					int alt1=2;
					int LA1_0 = input.LA(1);
					if ( (LA1_0==FUNCTION) ) {
						alt1=1;
					}
					switch (alt1) {
						case 1 :
							// Tiger.g:213:14: funct_declaration_tail funct_declaration_list
							{
							pushFollow(FOLLOW_funct_declaration_tail_in_funct_declaration_list1169);
							funct_declaration_tail8=funct_declaration_tail();
							state._fsp--;

							adaptor.addChild(root_0, funct_declaration_tail8.getTree());

							pushFollow(FOLLOW_funct_declaration_list_in_funct_declaration_list1171);
							funct_declaration_list9=funct_declaration_list();
							state._fsp--;

							adaptor.addChild(root_0, funct_declaration_list9.getTree());

							}
							break;

					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "funct_declaration_list"


	public static class funct_ret_type_return extends ParserRuleReturnScope {
		public String retType;
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "funct_ret_type"
	// Tiger.g:216:1: funct_ret_type returns [String retType] : ( alltype ) -> ^( RET_TYPE alltype ) ;
	public final TigerParser.funct_ret_type_return funct_ret_type() throws RecognitionException {
		TigerParser.funct_ret_type_return retval = new TigerParser.funct_ret_type_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope alltype10 =null;

		RewriteRuleSubtreeStream stream_alltype=new RewriteRuleSubtreeStream(adaptor,"rule alltype");

		try {
			// Tiger.g:217:2: ( ( alltype ) -> ^( RET_TYPE alltype ) )
			// Tiger.g:217:4: ( alltype )
			{
			// Tiger.g:217:4: ( alltype )
			// Tiger.g:217:5: alltype
			{
			pushFollow(FOLLOW_alltype_in_funct_ret_type1196);
			alltype10=alltype();
			state._fsp--;

			stream_alltype.add(alltype10.getTree());
			retval.retType = (alltype10!=null?((TigerParser.alltype_return)alltype10).retType:null);
			}

			// AST REWRITE
			// elements: alltype
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 217:45: -> ^( RET_TYPE alltype )
			{
				// Tiger.g:217:48: ^( RET_TYPE alltype )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(RET_TYPE, "RET_TYPE"), root_1);
				adaptor.addChild(root_1, stream_alltype.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "funct_ret_type"


	public static class alltype_return extends ParserRuleReturnScope {
		public String retType;
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "alltype"
	// Tiger.g:220:1: alltype returns [String retType] : ( Identifier | INT | FIXEDPT );
	public final TigerParser.alltype_return alltype() throws RecognitionException {
		TigerParser.alltype_return retval = new TigerParser.alltype_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Identifier11=null;
		Token INT12=null;
		Token FIXEDPT13=null;

		Object Identifier11_tree=null;
		Object INT12_tree=null;
		Object FIXEDPT13_tree=null;

		try {
			// Tiger.g:221:2: ( Identifier | INT | FIXEDPT )
			int alt3=3;
			switch ( input.LA(1) ) {
			case Identifier:
				{
				alt3=1;
				}
				break;
			case INT:
				{
				alt3=2;
				}
				break;
			case FIXEDPT:
				{
				alt3=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// Tiger.g:221:4: Identifier
					{
					root_0 = (Object)adaptor.nil();


					Identifier11=(Token)match(input,Identifier,FOLLOW_Identifier_in_alltype1222); 
					Identifier11_tree = (Object)adaptor.create(Identifier11);
					adaptor.addChild(root_0, Identifier11_tree);

					retval.retType = (Identifier11!=null?Identifier11.getText():null);
					}
					break;
				case 2 :
					// Tiger.g:221:47: INT
					{
					root_0 = (Object)adaptor.nil();


					INT12=(Token)match(input,INT,FOLLOW_INT_in_alltype1227); 
					INT12_tree = (Object)adaptor.create(INT12);
					adaptor.addChild(root_0, INT12_tree);

					retval.retType = "int";
					}
					break;
				case 3 :
					// Tiger.g:221:72: FIXEDPT
					{
					root_0 = (Object)adaptor.nil();

